project changes committed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<li class="list-group-item">
                     <a href="sample">Sample</a>
                 </li>
+				<li class="list-group-item">
+                    <a href="demo">Demo</a>
+                </li>
             </ul>
         </div>
     </div>
