--- a/show-time/index.html
+++ b/show-time/index.html
@@ -11,12 +11,12 @@
 
 <body class="material e-css">
   <app-root></app-root>
-  <script src="https://syncfusion-staging.github.io/sample/runtime.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/sample/polyfills-es5.js" nomodule defer></script>
-  <script src="https://syncfusion-staging.github.io/sample/polyfills.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/sample/styles.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/sample/vendor.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/sample/main.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/runtime.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/polyfills-es5.js" nomodule defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/polyfills.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/styles.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/vendor.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/main.js" defer></script>
 </body>
 
 </html>
