--- a/show-time/index.html
+++ b/show-time/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Scheduler</title>
-  <base href="/">
+<!--   <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="material e-css">
   <app-root></app-root>
-  <script src="https://syncfusion-staging.github.io/show-time/runtime.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/show-time/polyfills-es5.js" nomodule defer></script>
-  <script src="https://syncfusion-staging.github.io/show-time/polyfills.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/show-time/styles.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/show-time/vendor.js" defer></script>
-  <script src="https://syncfusion-staging.github.io/show-time/main.js" defer></script>
+  <script src="https://syncfusion-staging.github.io/show-time/runtime.js"></script>
+  <script src="https://syncfusion-staging.github.io/show-time/polyfills-es5.js" nomodule ></script>
+  <script src="https://syncfusion-staging.github.io/show-time/polyfills.js"></script>
+  <script src="https://syncfusion-staging.github.io/show-time/styles.js"></script>
+  <script src="https://syncfusion-staging.github.io/show-time/vendor.js"></script>
+  <script src="https://syncfusion-staging.github.io/show-time/main.js"></script>
 </body>
 
 </html>
