sample(BLAZ-8440): kanban new samples added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 				<li class="list-group-item">
                     <a href="demo">Demo</a>
                 </li>
+                <li class="list-group-item">
+                    <a href="workflow">Kanban Workflow</a>
+                </li>
             </ul>
         </div>
     </div>
