kanban demos committed

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <li class="list-group-item">
                     <a href="accessibility">Web Accessibility (Timeline Views)</a>
                 </li>
-				<li class="list-group-item">
+                <li class="list-group-item">
                     <a href="sample">Sample</a>
                 </li>
-				<li class="list-group-item">
+                <li class="list-group-item">
                     <a href="demo">Demo</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="workflow">Kanban Workflow</a>
+                    <a href="kanban">Kanban Demos</a>
                 </li>
             </ul>
         </div>
