--- a/kanban/index.html
+++ b/kanban/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Kanban Demos</title>
+    <base href="">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="Typescript UI Controls" />
