kanban demos committed

--- a/kanban/samples/board-scrolling.html
+++ b/kanban/samples/board-scrolling.html
@@ -8,13 +8,8 @@
     <meta name="description" content="Typescript UI Controls" />
     <meta name="author" content="Syncfusion" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../styles/material.css" />
-    <script src="../../scripts/ej2.min.js"></script>
-    <style>
-        .row {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://syncfusion-staging.github.io/kanban/styles/material.css" />
+    <script src="https://syncfusion-staging.github.io/kanban/scripts/ej2.min.js"></script>
 </head>
 
 <body>
@@ -26,7 +21,7 @@
         </div>
     </div>
 
-    <script src="./board-scrolling.js"></script>
+    <script src="https://syncfusion-staging.github.io/kanban/samples/board-scrolling.js"></script>
 </body>
 
 </html>
