--- a/kanban/samples/column-scrolling.html
+++ b/kanban/samples/column-scrolling.html
@@ -8,13 +8,9 @@
     <meta name="description" content="Typescript UI Controls" />
     <meta name="author" content="Syncfusion" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../styles/material.css" />
-    <script src="../../scripts/ej2.min.js"></script>
+    <link rel="stylesheet" href="https://syncfusion-staging.github.io/kanban/styles/material.css" />
+    <script src="https://syncfusion-staging.github.io/kanban/scripts/ej2.min.js"></script>
     <style>
-        .row {
-            margin-bottom: 10px;
-        }
-
         .e-kanban .e-kanban-table.e-content-table .e-content-row:not(.e-swimlane-row) td {
             height: 500px;
         }
@@ -30,7 +26,7 @@
         </div>
     </div>
 
-    <script src="./column-scrolling.js"></script>
+    <script src="https://syncfusion-staging.github.io/kanban/samples/column-scrolling.js"></script>
 </body>
 
 </html>
