staging refreshed with latest source

--- a/index.html
+++ b/index.html
@@ -16,19 +16,10 @@
                     <a href="appointment-planner">Appointment Planner</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="scheduler">Timeline Views (Horizontal Orientation)</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="accessibility">Web Accessibility (Timeline Views)</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="sample">Sample</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="demo">Demo</a>
-                </li>
-                <li class="list-group-item">
                     <a href="kanban">Kanban Demos</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="schedule">Schedule Demos</a>
                 </li>
             </ul>
         </div>
