--- a/kanban/index.html
+++ b/kanban/index.html
@@ -24,19 +24,19 @@
                     <div class="col-md-12">
                         <ul style="padding:0;">
                             <li class="list-group-item">
-                                <a href="./samples/workflow.html" target="_blank">Workflow</a>
+                                <a href="./samples/workflow.html">Workflow</a>
                             </li>
                             <li class="list-group-item">
-                                <a href="./samples/custom-sorting.html" target="_blank">Custom Sorting</a>
+                                <a href="./samples/custom-sorting.html">Custom Sorting</a>
                             </li>
                             <li class="list-group-item">
-                                <a href="./samples/page-scrolling.html" target="_blank">Page Scrolling</a>
+                                <a href="./samples/page-scrolling.html">Page Scrolling</a>
                             </li>
                             <li class="list-group-item">
-                                <a href="./samples/board-scrolling.html" target="_blank">Board Scrolling</a>
+                                <a href="./samples/board-scrolling.html">Board Scrolling</a>
                             </li>
                             <li class="list-group-item">
-                                <a href="./samples/column-scrolling.html" target="_blank">Column Scrolling</a>
+                                <a href="./samples/column-scrolling.html">Column Scrolling</a>
                             </li>
                         </ul>
                     </div>
