staging refreshed with latest source

--- a/kanban/index.html
+++ b/kanban/index.html
@@ -12,34 +12,36 @@
         h4 {
             text-align: center;
         }
+
+        .card {
+            border: 0;
+        }
     </style>
 </head>
 
 <body>
-    <div style="padding:25px;">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Kanban Sample lists</h4>
-                <div class="card-text">
-                    <div class="col-md-12">
-                        <ul style="padding:0;">
-                            <li class="list-group-item">
-                                <a href="./samples/workflow.html">Workflow</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="./samples/custom-sorting.html">Custom Sorting</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="./samples/page-scrolling.html">Page Scrolling</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="./samples/board-scrolling.html">Board Scrolling</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="./samples/column-scrolling.html">Column Scrolling</a>
-                            </li>
-                        </ul>
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Kanban Sample Lists</h4>
+            <div class="card-text">
+                <div class="col-md-12">
+                    <ul class="list-group" style="padding:0;">
+                        <li class="list-group-item">
+                            <a href="./samples/workflow.html">Workflow</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="./samples/custom-sorting.html">Custom Sorting</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="./samples/page-scrolling.html">Page Scrolling</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="./samples/board-scrolling.html">Board Scrolling</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="./samples/column-scrolling.html">Column Scrolling</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
