--- a/schedule/index.html
+++ b/schedule/index.html
@@ -12,28 +12,30 @@
         h4 {
             text-align: center;
         }
+
+        .card {
+            border: 0;
+        }
     </style>
 </head>
 
 <body>
-    <div style="padding:25px;">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Schedule Sample lists</h4>
-                <div class="card-text">
-                    <div class="col-md-12">
-                        <ul style="padding:0;">
-                            <li class="list-group-item">
-                                <a href="accessibility">Web Accessibility (Timeline Views)</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="orientation">Timeline Views (Horizontal Orientation)</a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="week-number">Week Number</a>
-                            </li>
-                        </ul>
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Schedule Sample Lists</h4>
+            <div class="card-text">
+                <div class="col-md-12">
+                    <ul class="list-group" style="padding:0;">
+                        <li class="list-group-item">
+                            <a href="accessibility">Web Accessibility (Timeline Views)</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="orientation">Timeline Views (Horizontal Orientation)</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="week-number">Week Number</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
