--- a/index.html
+++ b/index.html
@@ -6,22 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Syncfusion Staging Examples</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <style type="text/css">
+        h4 {
+            text-align: center;
+        }
+
+        .card {
+            border: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <div style="padding: 20px;">
-        <div style="padding-top: 20px;">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <a href="appointment-planner">Appointment Planner</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="kanban">Kanban Demos</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="schedule">Schedule Demos</a>
-                </li>
-            </ul>
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Staging Sample Lists</h4>
+            <div class="card-text">
+                <div class="col-md-12">
+                    <ul class="list-group" style="padding:0;">
+                        <li class="list-group-item">
+                            <a href="appointment-planner">Appointment Planner</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="kanban">Kanban Demos</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="schedule">Schedule Demos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </body>
