signalr project added

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -33,6 +33,9 @@
                             <a href="orientation">Timeline Views (Horizontal Orientation)</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="signalr">Real Time Update (SignalR)</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="week-number">Week Number</a>
                         </li>
                     </ul>
