time format staging added

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -36,6 +36,9 @@
                             <a href="signalr">Real Time Update (SignalR)</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="time-format">Time Format</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="week-number">Week Number</a>
                         </li>
                     </ul>
