--- a/kanban/index.html
+++ b/kanban/index.html
@@ -27,19 +27,22 @@
                 <div class="col-md-12">
                     <ul class="list-group" style="padding:0;">
                         <li class="list-group-item">
-                            <a href="./samples/workflow.html">Workflow</a>
+                            <a href="samples/workflow.html">Workflow</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="./samples/custom-sorting.html">Custom Sorting</a>
+                            <a href="samples/custom-sorting.html">Custom Sorting</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="./samples/page-scrolling.html">Page Scrolling</a>
+                            <a href="samples/page-scrolling.html">Page Scrolling</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="./samples/board-scrolling.html">Board Scrolling</a>
+                            <a href="samples/board-scrolling.html">Board Scrolling</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="./samples/column-scrolling.html">Column Scrolling</a>
+                            <a href="samples/column-scrolling.html">Column Scrolling</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="external-drag-and-drop">External Drag and Drop</a>
                         </li>
                     </ul>
                 </div>
