individual component script generation added

--- a/kanban/external-drag-and-drop/index.html
+++ b/kanban/external-drag-and-drop/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Time Format</title>
+    <title>External Drag and Drop</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
     <style type="text/css">
