--- a/schedule/index.html
+++ b/schedule/index.html
@@ -41,6 +41,9 @@
                         <li class="list-group-item">
                             <a href="week-number">Week Number</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="multiple-drag-and-drop">Multiple Drag and Drop</a>
+                        </li>
                     </ul>
                 </div>
             </div>
