feature(EJ2-45292): modified sample for multiple dragging

--- a/schedule/multiple-drag-and-drop/index.html
+++ b/schedule/multiple-drag-and-drop/index.html
@@ -2,21 +2,28 @@
 <html>
 
 <head>
-    <title>Multiple Drag and Drop</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
+  <title>Time Format</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
 </head>
 
 <body class="e-css">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="schedule"></div>
-            </div>
+  <div class="container-fluid" style="margin-top:15px;">
+    <div class="row">
+      <div class="col-md-9">
+        <div id="schedule"></div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-check">
+          <label class="form-check-label">
+            <input id="group" checked="true" class="form-check-input" type="checkbox"> Group
+          </label>
         </div>
+      </div>
     </div>
+  </div>
 
-    <script src="./index.js" type="text/javascript"></script>
+  <script src="./index.js" type="text/javascript"></script>
 </body>
 
 </html>
