--- a/schedule/multiple-drag-and-drop/index.html
+++ b/schedule/multiple-drag-and-drop/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Time Format</title>
+  <title>Multiple drag and drop</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
 </head>
