feature(EJ2-45292): Added sample for multiple dragging

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -44,6 +44,9 @@
                         <li class="list-group-item">
                             <a href="multiple-drag-and-drop">Multiple Drag and Drop</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="multiple-drag-and-drop-virtual-scroll">Multiple Drag and Drop with virtual scrolling</a>
+                        </li>
                     </ul>
                 </div>
             </div>
