--- a/schedule/index.html
+++ b/schedule/index.html
@@ -47,6 +47,9 @@
                         <li class="list-group-item">
                             <a href="multiple-drag-and-drop-virtual-scroll">Multiple Drag and Drop with virtual scrolling</a>
                         </li>
+						<li class="list-group-item">
+                            <a href="ej1-timezone">EJ1 Timezone</a>
+                        </li>
                     </ul>
                 </div>
             </div>
