ej1-timezone sample hosted

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <li class="list-group-item">
                             <a href="schedule">Schedule Demos</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="317385-Scheduler">Scheduler (317385)</a>
+                        </li>
                     </ul>
                 </div>
             </div>
