--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <li class="list-group-item">
                             <a href="317385-Scheduler">Scheduler (317385)</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="317385-Angular8-Scheduler">Scheduler ng-8 (317385)</a>
+                        </li>
                     </ul>
                 </div>
             </div>
