--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <li class="list-group-item">
                             <a href="317385-Angular8-Scheduler">Scheduler ng-8 (317385)</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="317385-Angular8-Scheduler-without-refresh-issue">Scheduler ng-8 without refersh issue(317385)</a>
+                        </li>
                     </ul>
                 </div>
             </div>
