--- a/317385-Angular8-Scheduler-without-refresh-issue/index.html
+++ b/317385-Angular8-Scheduler-without-refresh-issue/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EJ2 Angular Scheduler</title>
-  <base href="/">
+  <base href="">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
