--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,6 +30,9 @@
                             <a href="accessibility">Web Accessibility (Timeline Views)</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="allday-scroll">AllDay Scrolling</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="orientation">Timeline Views (Horizontal Orientation)</a>
                         </li>
                         <li class="list-group-item">
