--- a/schedule/index.html
+++ b/schedule/index.html
@@ -56,6 +56,9 @@
 						<li class="list-group-item">
                             <a href="ej1-timezone">EJ1 Timezone</a>
                         </li>
+						<li class="list-group-item">
+                            <a href="print">Print</a>
+                        </li>
                     </ul>
                 </div>
             </div>
