--- a/schedule/print/index.html
+++ b/schedule/print/index.html
@@ -2,35 +2,72 @@
 <html>
 
 <head>
-  <title>Print</title>
+  <title>Print Improvements</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
+  <link href="css/material.css" rel="stylesheet">
 
   <style>
     html,
     body {
       height: 100vh;
+      margin: 0;
+      overflow: auto;
+      padding: 0;
       width: 100vw;
+    }
+
+    .templatewrap img {
+      height: 24px;
     }
   </style>
 </head>
 
 <body class="e-css">
-  <div class="container-fluid mt-3">
-    <div class="row mb-3">
-      <div class="col-md-3">
-        <button id="print" class="btn">Print</button>
-      </div>
-    </div>
-    <div class="row mb-3">
+  <div class="container-fluid px-0 py-0">
+    <div class="row mx-3 my-3">
       <div class="col-md-9">
         <div id="schedule"></div>
       </div>
       <div class="col-md-3 properties">
         <div class="row mb-3">
-          <div class="col-md-5" style="line-height:38px;font-weight:500;">Height</div>
-          <div class="col-md-7">
-            <select id="printHeight" class="form-control e-css">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input class="e-btn" id="printSchedule" type="button" value="Print" />
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">Current Date</div>
+          <div class="col-md-6">
+            <input type="text" id="scheduledate" />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">Current View</div>
+          <div class="col-md-6">
+            <select id="scheduleview" name="ddl" class="form-control">
+              <option value="0">Day</option>
+              <option value="1" selected>Week</option>
+              <option value="2">Work Week</option>
+              <option value="3">Month</option>
+              <option value="4">Agenda</option>
+              <option value="5">Month Agenda</option>
+              <option value="6">Timeline Day</option>
+              <option value="7">Timeline Week</option>
+              <option value="8">Timeline WorkWeek</option>
+              <option value="9">Timeline Month</option>
+              <option value="10">Year</option>
+              <option value="11">Horizontal Year</option>
+              <option value="12">Vertical Year</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">Height</div>
+          <div class="col-md-6">
+            <select id="heightChange" name="ddl" class="form-control">
               <option value="auto" selected>Auto</option>
               <option value="100%">100%</option>
               <option value="500px">500px</option>
@@ -38,18 +75,192 @@
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-md-5" style="line-height:38px;font-weight:500;">Width</div>
-          <div class="col-md-7">
-            <select id="printWidth" class="form-control e-css">
+          <div class="col-md-4">Width</div>
+          <div class="col-md-6">
+            <select id="widthChange" name="ddl" class="form-control">
               <option value="auto" selected>Auto</option>
               <option value="100%">100%</option>
               <option value="500px">500px</option>
             </select>
           </div>
         </div>
+        <div class="row mb-3">
+          <div class="col-md-4">First day of week</div>
+          <div class="col-md-6">
+            <select id="firstDayOfWeek" name="ddl" class="form-control">
+              <option value="0">Sunday</option>
+              <option value="1" selected>Monday</option>
+              <option value="2">Tuesday</option>
+              <option value="3">Wednesday</option>
+              <option value="4">Thursday</option>
+              <option value="5">Friday</option>
+              <option value="6">Saturday</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">Work days</div>
+          <div class="col-md-6">
+            <select id="workDays" name="ddl" class="form-control">
+              <option value="1,3,5">Mon, Wed, Fri</option>
+              <option value="1,2,3,4,5">Mon, Tue, Wed, Thu, Fri</option>
+              <option value="2,3,4,5">Tue, Wed, Thu, Fri</option>
+              <option value="4,5,6,1,2" selected>Thu, Fri, Sat, Mon, Tue</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">Start hour</div>
+          <div class="col-md-6">
+            <select id="startHour" name="ddl" class="form-control">
+              <option value="06:00">06:00</option>
+              <option value="07:00">07:00</option>
+              <option value="07:00">08:00</option>
+              <option value="08:00" selected>08:00</option>
+              <option value="09:00">09:00</option>
+              <option value="10:00">10:00</option>
+              <option value="11:00">11:00</option>
+              <option value="12:00">12:00</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-4">End hour</div>
+          <div class="col-md-6">
+            <select id="endHour" name="ddl" class="form-control">
+              <option value="13:00">13:00</option>
+              <option value="14:00">14:00</option>
+              <option value="15:00">15:00</option>
+              <option value="16:00" selected>16:00</option>
+              <option value="17:00">17:00</option>
+              <option value="18:00">18:00</option>
+              <option value="19:00">19:00</option>
+              <option value="20:00">20:00</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="timeScale" checked="true" class="form-check-input" type="checkbox">
+                Time scale
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="rowAutoHeight" checked="false" class="form-check-input" type="checkbox">
+                Row auto height
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="cellHeaderTemplate" checked="true" class="form-check-input" type="checkbox">
+                Cell header template
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="cellTemplate" checked="true" class="form-check-input" type="checkbox">
+                Cell template
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="dateHeaderTemplate" checked="true" class="form-check-input" type="checkbox">
+                Date header template
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="headerbar" checked="true" class="form-check-input" type="checkbox">
+                Show/Hide Header bar
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="isGrouping" class="form-check-input" type="checkbox">
+                Grouping
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="resourceHeaderTemplate" class="form-check-input" disabled="true" type="checkbox">
+                Resource header template
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="showWeekNumber" checked="true" class="form-check-input" type="checkbox">
+                Show week number
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="showWeekend" checked="true" class="form-check-input" type="checkbox">
+                Show week end
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-10">
+            <div class="form-check">
+              <label class="form-check-label">
+                <input id="enableRtl" class="form-check-input" type="checkbox">
+                Enable RTL
+              </label>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
+  <script id="resourceTemplate" type="text/x-template">
+    <div class='template-wrap'>
+        <div class="resource-details">
+            <div class="resource-name">${resourceData.Text}</div>
+            <div class="resource-designation">${resourceData.Designation}</div>
+        </div>
+    </div>
+</script>
 
   <script src="./script/index.js" type="text/javascript"></script>
 </body>
