project changes committed

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <li class="list-group-item">
                             <a href="317827-timezone">Scheduler React timezone</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="tailwind">Tailwind Theme</a>
+                        </li>
                     </ul>
                 </div>
             </div>
