--- a/tailwind/toolbar/index.html
+++ b/tailwind/toolbar/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <title>Time Format</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./theme-files/tailwind.css" rel="stylesheet">
-  <link href="icons.css" rel="stylesheet">
+    <title>Toolbar - Tailwind theme</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./theme-files/tailwind.css" rel="stylesheet">
+    <link href="icons.css" rel="stylesheet">
 </head>
 
 <body class="e-css">
-   <div class="container-fluid" style="margin-top:15px;">
+    <div class="container-fluid" style="margin-top:15px;">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-9">
                 <span>Default </span>
                 <div style="padding: 20px;">
                     <div id="ej2Toolbar"> </div>
@@ -33,21 +33,20 @@
                     <div id="ej2Toolbar4"> </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-3">
                 <div class="prop-grid">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <button id="btn_mouse" class="e-btn">Mouse</button>
-                        </div>
-                        <div class="col-md-4">
-                            <button id="btn_touch" class="e-btn">Touch</button>
+                    <div class="row mb-3">
+                        <div class="col-4">Choose Mode</div>
+                        <div class="col-8 row">
+                            <button id="btn_mouse" class="btn m-2 btn-primary">Mouse</button>
+                            <button id="btn_touch" class="btn m-2">Touch</button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">Choose Theme</div>
-                        <div class="col-md-6">
+                    <div class="row mb-3">
+                        <div class="col-4">Choose Theme</div>
+                        <div class="col-8">
                             <select id="themechange" name="ddl" class="form-control">
-                                <option value="material" selected>Material</option>
+                                <option value="material">Material</option>
                                 <option value="fabric">Fabric</option>
                                 <option value="bootstrap">Bootstrap</option>
                                 <option value="highcontrast">High Contrast</option>
@@ -56,7 +55,7 @@
                                 <option value="bootstrap-dark">Bootstrap Dark</option>
                                 <option value="highcontrast-light">High Contrast Light</option>
                                 <option value="bootstrap4">Bootstrap 4</option>
-                                <option value="tailwind">Tailwind</option>
+                                <option value="tailwind" selected>Tailwind</option>
                                 <option value="tailwind-dark">Tailwind Dark</option>
                             </select>
                         </div>
@@ -67,6 +66,6 @@
     </div>
 
     <script src="./script/index.js" type="text/javascript"></script>
-  </body>
+</body>
 
 </html>
