project changes committed

--- a/schedule/year-view/index.html
+++ b/schedule/year-view/index.html
@@ -2,19 +2,95 @@
 <html>
 
 <head>
-    <title>Year view improvements</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./css/material.css" rel="stylesheet">
+  <title>Year View Improvements</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./css/material.css" rel="stylesheet">
+
+  <style>
+    html,
+    body {
+      height: 100vh;
+      margin: 0;
+      overflow: auto;
+      padding: 0;
+      width: 100vw;
+    }
+  </style>
 </head>
 
 <body class="e-css">
-    <div class="container-fluid" style="margin-top:15px;">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="schedule"></div>
-            </div>
+  <div class="container-fluid px-0 py-0">
+    <div class="row mx-3 my-3">
+      <div class="col-md-9">
+        <div id="schedule"></div>
+      </div>
+      <div class="col-md-3 properties">
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">First Month of Year</div>
+          <div class="col-md-7">
+            <select id="firstMonthOfYear" name="firstMonthOfYear" class="form-select">
+              <option value="0" selected>January</option>
+              <option value="1">February</option>
+              <option value="2">March</option>
+              <option value="3">April</option>
+              <option value="4">May</option>
+              <option value="5">June</option>
+              <option value="6">July</option>
+              <option value="7">August</option>
+              <option value="8">September</option>
+              <option value="9">October</option>
+              <option value="10">November</option>
+              <option value="11">December</option>
+            </select>
+          </div>
         </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">No of Months</div>
+          <div class="col-md-7">
+            <input id="yearMonthsCount" class="form-control" type="number" min="1" value="12" name="yearMonthsCount"
+              style="width:100%;" />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">Custom Year Months</div>
+          <div class="col-md-7">
+            <select id="yearMonths" name="yearMonths" class="form-select" multiple>
+              <option value="0" selected>January</option>
+              <option value="1" selected>February</option>
+              <option value="2" selected>March</option>
+              <option value="3" selected>April</option>
+              <option value="4" selected>May</option>
+              <option value="5" selected>June</option>
+              <option value="6" selected>July</option>
+              <option value="7" selected>August</option>
+              <option value="8" selected>September</option>
+              <option value="9" selected>October</option>
+              <option value="10" selected>November</option>
+              <option value="11" selected>December</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">Auto Row Height</div>
+          <div class="col-md-7">
+            <select id="rowAutoHeight" name="rowAutoHeight" class="form-select">
+              <option value="true">Enable</option>
+              <option value="false" selected>Disable</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">Resource Grouping</div>
+          <div class="col-md-7">
+            <select id="resourceGrouping" name="resources" class="form-select">
+              <option value="true" selected>Enable</option>
+              <option value="false">Disable</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
     <script type="text/javascript" src="./script/index.js"></script>
 </body>
