--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="Typescript UI Controls" />
     <meta name="author" content="Syncfusion" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style type="text/css">
         h4 {
             text-align: center;
@@ -26,6 +26,9 @@
             <div class="card-text">
                 <div class="col-md-12">
                     <ul class="list-group" style="padding:0;">
+                        <li class="list-group-item">
+                            <a href="tab">Tab</a>
+                        </li>
                         <li class="list-group-item">
                             <a href="toolbar">Toolbar</a>
                         </li>
