--- a/tailwind/tab/index.html
+++ b/tailwind/tab/index.html
@@ -1,66 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Time Format</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./theme-files/tailwind.css" rel="stylesheet">
-  <link href="icons.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tab - Tailwind theme</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./theme-files/tailwind.css" rel="stylesheet">
+    <link href="icons.css" rel="stylesheet">
+    <style>
+        .btn {
+            background-color: #efefef;
+        }
+    </style>
 </head>
 
 <body class="e-css">
-    <tr>
-        <td> <button id="btn_mouse" class="e-btn">Mouse</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_touch" class="e-btn">Touch</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_high" class="e-btn">HighContrast</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_boot" class="e-btn">Bootstrap</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_tail" class="e-btn">Tailwind</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_taildark" class="e-btn">Tailwind-dark</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_fabric" class="e-btn">Fabric</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_material" class="e-btn">Material</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_closeButton" class="e-btn">showCloseButton</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_enableRtl" class="e-btn">enableRtl</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_orientation" class="e-btn">headerPlacement</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_default" class="e-btn">default</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_fill" class="e-btn">Fill</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_bg" class="e-btn">Background</button> </td>
-    </tr>
-    <tr>
-        <td> <button id="btn_accent" class="e-btn">Accent</button> </td>
-    </tr>
-    <br/><br/>
-    <div style="height: auto">
-        <div id="ej2Tab" style="height:auto">
-        </div>
+    <table>
+        <tr>
+            <td> <button id="btn_mouse" class="btn btn-info">Mouse</button> </td>
+            <td> <button id="btn_touch" class="btn btn-info">Touch</button> </td>
+        </tr>
+        <tr>
+            <td> <button id="btn_material" class="btn btn-info">Material</button> </td>
+            <td> <button id="btn_fabric" class="btn btn-info">Fabric</button> </td>
+            <td> <button id="btn_boot" class="btn btn-info">Bootstrap</button> </td>
+            <td> <button id="btn_high" class="btn btn-info">HighContrast</button> </td>
+            <td> <button id="btn_tail" class="btn btn-info">Tailwind</button> </td>
+            <td> <button id="btn_taildark" class="btn btn-info">Tailwind Dark</button> </td>
+        </tr>
+        <tr>
+            <td> <button id="btn_closeButton" class="btn btn-info">ShowCloseButton</button></td>
+            <td> <button id="btn_enableRtl" class="btn btn-info">EnableRtl</button> </td>
+            <td> <button id="btn_orientation" class="btn btn-info">HeaderPlacement</button></td>
+            <td> <button id="btn_default" class="btn btn-info">Default</button> </td>
+            <td> <button id="btn_fill" class="btn btn-info">Fill</button> </td>
+            <td> <button id="btn_bg" class="btn btn-info">Background</button> </td>
+            <td> <button id="btn_accent" class="btn btn-info">Accent</button> </td>
+        </tr>
+    </table>
+    <br />
+    <br />
+    <div>
+        <div id="ej2Tab"></div>
     </div>
-
     <script src="./script/index.js" type="text/javascript"></script>
-  </body>
+</body>
 
 </html>
