--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -27,6 +27,9 @@
                 <div class="col-md-12">
                     <ul class="list-group" style="padding:0;">
                         <li class="list-group-item">
+                            <a href="accordion">Accordion</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="tab">Tab</a>
                         </li>
                         <li class="list-group-item">
