--- a/schedule/index.html
+++ b/schedule/index.html
@@ -32,6 +32,9 @@
                         <li class="list-group-item">
                             <a href="allday-scroll">AllDay Scrolling</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="compact-view">Compact View</a>
+                        </li>
 						<li class="list-group-item">
                             <a href="year-view">Year View Improvements</a>
                         </li>
