tailwind theme committed

--- a/schedule/print/index.html
+++ b/schedule/print/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Print Improvements</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="css/material.css" rel="stylesheet">
+  <link href="css/tailwind.css" rel="stylesheet">
 
   <style>
     html,
