--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -30,6 +30,9 @@
                             <a href="accordion">Accordion</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="schedule">Schedule</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="tab">Tab</a>
                         </li>
                         <li class="list-group-item">
