--- a/tailwind/tab/index.html
+++ b/tailwind/tab/index.html
@@ -7,7 +7,7 @@
     <title>Tab - Tailwind theme</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- <link href="./theme-files/tailwind.css" rel="stylesheet"> -->
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./theme-files/base/tailwind.css" />
     <link rel="stylesheet" href="./theme-files/buttons/tailwind.css" />
     <link rel="stylesheet" href="./theme-files/popups/tailwind.css" />
