--- a/tailwind/schedule/index.html
+++ b/tailwind/schedule/index.html
@@ -6,14 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Schedule - Tailwind Theme</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/base/tailwind.css" />
-  <link rel="stylesheet" href="./css/buttons/tailwind.css" />
-  <link rel="stylesheet" href="./css/calendar/tailwind.css" />
-  <link rel="stylesheet" href="./css/ddl/tailwind.css" />
-  <link rel="stylesheet" href="./css/navigation/tailwind.css" />
-  <link rel="stylesheet" href="./css/popups/tailwind.css" />
-  <link rel="stylesheet" href="./css/input/tailwind.css" />
-  <link rel="stylesheet" href="./css/schedule/tailwind.css" />
+  <link rel="stylesheet" href="./css/tailwind.css" />
   <style>
     html,
     body {
