--- a/schedule/index.html
+++ b/schedule/index.html
@@ -62,6 +62,9 @@
 						<li class="list-group-item">
                             <a href="print">Print</a>
                         </li>
+						<li class="list-group-item">
+                            <a href="custom-sorting">Custom Event Sorting</a>
+                        </li>
                     </ul>
                 </div>
             </div>
