--- a/schedule/custom-sorting/index.html
+++ b/schedule/custom-sorting/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Custom Event Sorting Improvements</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./css/material.css" rel="stylesheet">
 
   <style>
@@ -29,6 +29,24 @@
           <div class="col-md-5" style="line-height:38px;font-weight:500;">Sort Comparer</div>
           <div class="col-md-7">
             <input id="sortComparer" checked="true" class="form-check-input" type="checkbox" />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">Sort Field</div>
+          <div class="col-md-7">
+            <select id="sortField" class="form-control e-css">
+              <option value="RankId" selected>RankId</option>
+              <option value="Priority">Priority</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-5" style="line-height:38px;font-weight:500;">Sort Order</div>
+          <div class="col-md-7">
+            <select id="sortOrder" class="form-control e-css">
+              <option value="ascending" selected>Ascending</option>
+              <option value="descending">Descending</option>
+            </select>
           </div>
         </div>
       </div>
