header indent template demo changes committed

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -35,7 +35,7 @@
                         <li class="list-group-item">
                             <a href="compact-view">Compact View</a>
                         </li>
-						<li class="list-group-item">
+                        <li class="list-group-item">
                             <a href="year-view">Year View Improvements</a>
                         </li>
                         <li class="list-group-item">
@@ -54,16 +54,20 @@
                             <a href="multiple-drag-and-drop">Multiple Drag and Drop</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="multiple-drag-and-drop-virtual-scroll">Multiple Drag and Drop with virtual scrolling</a>
+                            <a href="multiple-drag-and-drop-virtual-scroll">Multiple Drag and Drop with virtual
+                                scrolling</a>
                         </li>
-						<li class="list-group-item">
+                        <li class="list-group-item">
                             <a href="ej1-timezone">EJ1 Timezone</a>
                         </li>
-						<li class="list-group-item">
+                        <li class="list-group-item">
                             <a href="print">Print</a>
                         </li>
-						<li class="list-group-item">
+                        <li class="list-group-item">
                             <a href="custom-sorting">Custom Event Sorting</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="indent-template">Header Indent Template</a>
                         </li>
                     </ul>
                 </div>
