bootstrap5 theme demo committed

--- a/index.html
+++ b/index.html
@@ -34,19 +34,22 @@
                             <a href="317385-Scheduler">Scheduler (317385)</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="317385-Angular8-Scheduler">Scheduler ng-8 (317385)</a>
+                            <a href="317385-Angular8-Scheduler">Scheduler ng-8 with refresh (317385)</a>
                         </li>
-                          <li class="list-group-item">
+                        <li class="list-group-item">
                             <a href="React-Scheduler-editor-template">React scheduler Editor Template</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="317385-Angular8-Scheduler-without-refresh-issue">Scheduler ng-8 without refersh issue(317385)</a>
+                            <a href="317385-Angular8-Scheduler-without-refresh-issue">Scheduler ng-8 (317385)</a>
                         </li>
                         <li class="list-group-item">
                             <a href="317827-timezone">Scheduler React timezone</a>
                         </li>
                         <li class="list-group-item">
                             <a href="tailwind">Tailwind Theme</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="bootstrap5">Bootstrap 5 Theme</a>
                         </li>
                     </ul>
                 </div>
