--- a/bootstrap5/index.html
+++ b/bootstrap5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tailwind Theme Demos</title>
+    <title>Bootstrap 5 Theme Demos</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="Typescript UI Controls" />
