--- a/bootstrap5/accordion/index.html
+++ b/bootstrap5/accordion/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/bootstrap5.css" />
     <link rel="stylesheet" href="./css/icons.css" />
+    <script src="./script/ej2.min.js" type="text/javascript"></script>
     <style>
         .btn {
             background-color: #efefef;
