--- a/bootstrap5/schedule/index.html
+++ b/bootstrap5/schedule/index.html
@@ -7,6 +7,7 @@
   <title>Schedule - Bootstrap5 Theme</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./css/bootstrap5.css" />
+  <script src="./script/ej2.min.js" type="text/javascript"></script>
   <style>
     html,
     body {
