--- a/bootstrap5/toolbar/index.html
+++ b/bootstrap5/toolbar/index.html
@@ -8,30 +8,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/bootstrap5.css" rel="stylesheet" />
     <link href="./css/icons.css" rel="stylesheet" />
+    <script src="./script/ej2.min.js" type="text/javascript"></script>
+    <style>
+        .control-container {
+            padding: 2rem;
+        }
+    </style>
 </head>
 
 <body class="e-css">
     <div class="container-fluid" style="margin-top:15px;">
         <div class="row">
             <div class="col-9">
-                <span>Default </span>
-                <div style="padding: 20px;">
+                <span>Default</span>
+                <div class="control-container">
                     <div id="ej2Toolbar"></div>
                 </div>
-                <span>Scrollable </span>
-                <div style="padding: 20px;">
+                <span>Scrollable</span>
+                <div class="control-container">
                     <div id="ej2Toolbar1"></div>
                 </div>
-                <span>Popup </span>
-                <div style="padding: 20px;">
+                <span>Popup</span>
+                <div class="control-container">
                     <div id="ej2Toolbar2"></div>
                 </div>
-                <span>Extended </span>
-                <div style="padding: 50px;">
+                <span>Extended</span>
+                <div class="control-container">
                     <div id="ej2Toolbar3"></div>
                 </div>
-                <span>MultiRow </span>
-                <div style="padding: 50px;">
+                <span>MultiRow</span>
+                <div class="control-container">
                     <div id="ej2Toolbar4"></div>
                 </div>
             </div>
