--- a/schedule/index.html
+++ b/schedule/index.html
@@ -69,6 +69,12 @@
                         <li class="list-group-item">
                             <a href="indent-template">Header Indent Template</a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="spanned-events">AllDay Spanned Events</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="timezone">Timezone Settings</a>
+                        </li>
                     </ul>
                 </div>
             </div>
