--- a/schedule/timezone/index.html
+++ b/schedule/timezone/index.html
@@ -13,6 +13,17 @@
             <div class="col-9">
                 <div id="scheduler"></div>
             </div>
+            <div class="col-3">
+                <div class="row">
+                    <div class="col-4">Locale</div>
+                    <div class="col-8">
+                        <select id="locale" class="form-control e-css">
+                            <option value="en" selected>English</option>
+                            <option value="fr-CH">French</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
