--- a/gantt/virtualscroll/index.html
+++ b/gantt/virtualscroll/index.html
@@ -56,8 +56,20 @@
     <td>:${Duration}</td>
   </tr>
   <tr>
+  <td><b>StartDate</b></td>
+  <td>:${StartDate}</td>
+</tr>
+<tr>
+<td><b>EndDate</b></td>
+<td>:${EndDate}</td>
+</tr>
+<tr>
+<td><b>Progress</b></td>
+<td>:${Progress}</td>
+</tr>
+  <tr>
   <td><b>ParentID</b></td>
-  <td>:${ParentID}</td>
+  <td>:${parentID}</td>
 </tr>
       </table>
         </div>
