EJ2 Carousel Component demo changes committed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                             <a href="kanban">Kanban Demos</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="carousel">Carousel Demos</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="schedule">Schedule Demos</a>
                         </li>
                         <li class="list-group-item">
